package baseline;

public class loadItemList {
    /*
    ObservableList<Item> loadList = FXCollections.observableArrayList();

    void saveItemList (ObservableList<Item> savedList);
        - load saveList from a file of the users choosing;
        - ItemList.setcurrentList = loadList;
     */
}
