package baseline;

public class saveItemList {
    /*
    ObservableList<Item> savedList = FXCollections.observableArrayList();

    savedList = get.ItemList.listAll

    void saveItemList (ObservableList<Item> savedList);
        save savedList to File of users choosing;
     */
}
